# novel-crawler

./: .gitignore  README.md  ai_analyzer.py  booksource_loader.py  chapter_writer.py  cleaner.py  config.py  env.template  logger.py  main.py  pyproject.toml  requirement.txt  shuyuan.json  utils.py
